k8s-deploy-app/12-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: agenda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: agenda-worker:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: health
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 80m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 256Mi
