k8s-deploy-app/06-mailpit-http-route.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mailpit
  namespace: agenda
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "www.agenda.com"
  - "agenda.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /emails
    backendRefs:
    - name: mailpit-http
      port: 8025
